fix alignment on test matrix header

--- a/src/main/resources/static/css/dropproject.css
+++ b/src/main/resources/static/css/dropproject.css
@@ -57,7 +57,6 @@ pre {
 .test-details-header .badge {
     font-size: 10px;
     padding: 3px 5px;
-    margin-right: 4.3px;
     display: inline-block;
     min-width: 10px;
     font-weight: 700;
